@@ -10,7 +10,6 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        // testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -33,7 +32,13 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/license.txt'
         exclude 'META-INF/notice.txt'
-        //exclude 'META-INF/DEPENDENCIES'
+    }
+
+    testOptions {
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
     }
 }
 
@@ -49,12 +54,18 @@ dependencies {
     compile files('build/org.apache.httpcomponents.httpclient_4.5.1.jar')
     
     compile fileTree(dir: 'libs', include: ['*.jar'])
-//    testCompile 'junit:junit:4.12'
     // For Facebook SDK usage
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.google.android.gms:play-services-maps:8.4.0'
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
-//    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+}
+
+sourceSets {
+    test {
+        java {
+            srcDirs = ["app/src/test/java/io.github/getExposure/database/"]
+        }
+    }
 }
